--- a/Oeliander/Oeliander/Views/TerminalPage.xaml
+++ b/Oeliander/Oeliander/Views/TerminalPage.xaml
@@ -72,13 +72,21 @@
                     </ContextMenu>
                 </RichTextBox.ContextMenu>
             </RichTextBox>
+            <TextBlock
+                Grid.Row="4"
+                Grid.Column="1"
+                Text="> "
+                VerticalAlignment="Top"
+                FontSize="20" 
+                Margin="4,0,310,0" />
             <TextBox
                 Grid.Row="4"
                 Grid.Column="1"
                 x:Name="commandText"
                 Text="{Binding CommandText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                 Grid.RowSpan="1" 
-                Grid.ColumnSpan="1" KeyDown="commandText_KeyDown"/>
+                Grid.ColumnSpan="1" KeyDown="commandText_KeyDown" HorizontalAlignment="Left" Width="408" Margin="20,0,0,0"/>
+
             <DataGrid
                 x:Name="termGrid"
                 Grid.Row="3"
