Adding F5 BIG IP Scanner

--- a/Oeliander/Oeliander/Views/DirectoryViewPage.xaml
+++ b/Oeliander/Oeliander/Views/DirectoryViewPage.xaml
@@ -16,7 +16,8 @@
         <TextBlock
             Style="{StaticResource PageTitleStyle}"
             Margin="{StaticResource MediumLeftMargin}"
-            Text="Directory Viewer" Foreground="White" />
+            Text="Directory Viewer" Foreground="White"
+            HorizontalAlignment="Center" />
         <Grid
             Grid.Row="1">
             <ComboBox 
