--- a/Oeliander/Oeliander/Views/TerminalPage.xaml
+++ b/Oeliander/Oeliander/Views/TerminalPage.xaml
@@ -16,11 +16,10 @@
         <TextBlock
             Style="{StaticResource PageTitleStyle}"
             Margin="{StaticResource MediumLeftMargin}"
-            Text="{x:Static properties:Resources.TerminalPageTitle}" />
+            Text="{x:Static properties:Resources.TerminalPageTitle}"
+            HorizontalAlignment="Center" Foreground="White" />
         <Grid
-            Grid.Row="1"
-            Margin="{StaticResource MediumLeftRightMargin}"
-            Background="{DynamicResource MahApps.Brushes.Gray10}">
+            Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="4*"/>
                 <ColumnDefinition Width="229*"/>
@@ -80,33 +79,31 @@
                     </ContextMenu>
                 </RichTextBox.ContextMenu>
             </RichTextBox>
-            <TextBlock
-                Grid.Row="4"
-                Grid.Column="1"
-                Text="> "
-                VerticalAlignment="Top"
-                FontSize="20" 
-                Margin="4,0,310,0" />
             <TextBox
                 Grid.Row="4"
                 Grid.Column="1"
                 x:Name="commandText"
-                Text="{Binding CommandText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                Text="" 
                 Grid.RowSpan="1" 
-                Grid.ColumnSpan="1" KeyDown="commandText_KeyDown" HorizontalAlignment="Left" Width="408" Margin="20,0,0,0"/>
-
+                Grid.ColumnSpan="1" 
+                KeyDown="commandText_KeyDown" 
+                HorizontalAlignment="Left" 
+                Width="436" Margin="20,0,0,0"/>
+            <!--[Used in TextBox above] {Binding CommandText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}-->
             <DataGrid
                 x:Name="termGrid"
                 Grid.Row="3"
                 Grid.Column="3"
-                Grid.RowSpan="2" SelectedCellsChanged="userGrid_SelectedCellsChanged_1"
+                Grid.RowSpan="2" 
+                CanUserAddRows="False"
+                AutoGenerateColumns="False"
+                SelectedCellsChanged="userGrid_SelectedCellsChanged_1"
                 ItemsSource="{Binding CollectedTargets}" >
                 <DataGrid.Columns>
                     <DataGridTextColumn Binding="{Binding Index}" Header="#" />
                     <DataGridTextColumn Binding="{Binding IPAddress}" Header="IPAddress" />
                     <DataGridTextColumn Binding="{Binding Username}" Header="Username" />
                     <DataGridTextColumn Binding="{Binding Password}" Header="Password" />
-                    <DataGridTextColumn Binding="{Binding Status}" Header="Status" />
                 </DataGrid.Columns>
             </DataGrid>
             <TextBlock
@@ -115,6 +112,13 @@
                 Text="Server Address:" 
                 FontSize="18" 
                 Margin="7,6,299,9" />
+            <TextBlock
+                Grid.Row="4"
+                Grid.Column="1"
+                Text="&gt; "
+                VerticalAlignment="Center"
+                FontSize="20" 
+                Margin="3,0,439,0" Foreground="White" />
         </Grid>
     </Grid>
 </Page>
